[package]
authors = ["U007D <curly@humanenginuity.com>"]
categories = []
description = "<describe crate here>"
edition = "2018"
keywords = []
license = "MIT OR Apache-2.0"
name = "ada"
readme = "README.md"
repository = "https://github.com/u007d/ada"
version = "0.1.0"

[dependencies]
structopt = "0.3.21"
thiserror = "1.0.25"
he_std = { git = "ssh://git@github.com/u007d/he_std" }
core-error = { git = "https://github.com/core-error/core-error" }

[dev-dependencies]
assert2 = "0.3.5"

[profile.dev]
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "abort"
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = "fat"
opt-level = 3
panic = "abort"
rpath = false

[profile.test]
debug = true
debug-assertions = true
lto = false
opt-level = 0
rpath = false
